# models/namespace_get_request.go
@@ -8,8 +8,10 @@ package models
 import (
 	"context"
 
+	"github.com/go-openapi/errors"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
 )
 
 // NamespaceGetRequest namespace get request
@@ -22,10 +24,32 @@ type NamespaceGetRequest struct {
 
 	// name
 	Name string `json:"name,omitempty"`
+
+	// system Id
+	// Required: true
+	SystemID *int64 `json:"systemId"`
 }
 
 // Validate validates this namespace get request
 func (m *NamespaceGetRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateSystemID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *NamespaceGetRequest) validateSystemID(formats strfmt.Registry) error {
+
+	if err := validate.Required("systemId", "body", m.SystemID); err != nil {
+		return err
+	}
+
 	return nil
 }
 
